# halo2ools

./: Cargo.toml
halo2ools/: Cargo.toml
halo2ools/src/: lib.rs
halo2ools/src/io/: mod.rs
halo2ools/src/params/: mod.rs
halo2ools/tests/: downsize_test.rs  param_test.rs
halo2ools_cli/: Cargo.toml
halo2ools_cli/src/: main.rs
halo2ools_cli/src/cli/: mod.rs
src/params/: mod.rs
